# Genius-Tests-C

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: genius.yml
genius/src/ex00/: ft_putstr.c
genius/src/ex03/: ft_strcapitalize.c
genius/src/ex04/: ft_rev_in_tab.c
src/ex00/: ft_putstr.c
src/ex01/: ft_putnbr.c
src/ex02/: ft_strcpy.c
src/ex03/: ft_strcapitalize.c
src/ex04/: ft_sort_int_tab.c
src/ex05/: ft_strdup.c
test/: test00.c  test01.c  test02.c  test03.c  test04.c  test05.c
